<resources>
    <string name="app_name">DigiDiary</string>
    <string name="home_item">home</string>
    <string name="favourites_item">favourites</string>
    <string name="calendar_item">calendar</string>
    <string name="settings_item">settings</string>
    <string name="compose_diary">compose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digi_diary">Digi Diary</string>
    <string name="a_collection_of_notes_from_your_life">A collection of notes from your life</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="friday_august_30th_2020">Friday,August,30th,2020</string>
    <string name="today_is">Today is:</string>
    <string name="awesome">awesome</string>
    <string name="write_your_diary_here">Write your diary here</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="edit">Edit</string>
    <string name="details_of_diary">Details of Diary</string>
    <string name="dummy_text">dummy text dummy text dummy text dummy text dummy text dummy text dummy text dummy text dummy text dummy text</string>
    <string name="august">August</string>
    <string name="_2020">2020</string>
    <string name="_30">30</string>
    <string name="add_new_diary">Add New Diary ...</string>
    <string name="settings">settings</string>
</resources>
