<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".DiaryEditFragment">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_diary"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/friday_august_30th_2020"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/iv_calendar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/iv_diary_image"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@drawable/diary"
        app:layout_constraintEnd_toEndOf="@id/iv_calendar"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <View
        android:id="@+id/bottom_image_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:alpha="0.7"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="@id/iv_diary_image"
        app:layout_constraintEnd_toEndOf="@id/iv_diary_image"
        app:layout_constraintStart_toStartOf="@id/iv_diary_image" />

    <ImageView
        android:id="@+id/iv_change_picture"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="@id/bottom_image_bar"
        app:layout_constraintEnd_toEndOf="@id/bottom_image_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_image_bar" />

    <TextView
        android:id="@+id/tv_today_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/today_is"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_diary_image" />

    <EditText
        android:id="@+id/et_diary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/awesome"
        android:lines="1"
        android:maxEms="10"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_today_is"
        app:layout_constraintStart_toEndOf="@id/tv_today_is" />

    <EditText
        android:id="@+id/et_diary_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_your_diary_here"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_today_is" />

</androidx.constraintlayout.widget.ConstraintLayout>