<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashFragment">

    <ImageView
        android:id="@+id/dairy_icon"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_agenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_digi_diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="5dp"
        android:text="@string/digi_diary"
        android:textSize="70sp"
        app:fontFamily="@font/bangers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dairy_icon" />

    <TextView
        android:id="@+id/tv_collection_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_collection_of_notes_from_your_life"
        android:textAlignment="center"
        android:textSize="18sp"
        app:fontFamily="@font/antic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_digi_diary" />


</androidx.constraintlayout.widget.ConstraintLayout>